@@ -1,4 +1,7 @@
 2012-10-19 dschulze@adobe.com
+	Merge clip region defintion from 'clip' and 'clip-path'.
+
+2012-10-19 dschulze@adobe.com
 	Remove masking from example images.
 
 2012-10-12 dschulze@adobe.com
